# Math5600

./: CMakeLists.txt  PE_1_main.cpp  README.md  combinations.cpp  combinations.h  example_output.txt  lineq.cpp  lineq.h  main.cpp  rootfinding.cpp  rootfinding.h  rootfinding_sample_output.md  tchebyshev.cpp  tchebyshev_sample_output.md  tests.cpp  utils.cpp  utils.h
